--- a/my web page/sheelu.css
+++ b/my web page/sheelu.css
@@ -3,12 +3,6 @@ img{
 height: 200px;
 width: 200px;
 }
-
-body{
-    background-image: url("sj.jpg");
-    
-    
-}
 .ndd{
     text-align: center;
 
@@ -19,4 +13,47 @@ body{
 }
 h{
     color: aquamarine;
+}
+h4{
+    text-align: center;
+}
+.sheels stark
+{
+    text-align:center ;
+}
+.at{
+    float: bottom 15px;
+padding-bottom: 15x;
+}
+.card-img-bottom{
+    text-align: center;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: #111;
+  }
+.ajay{
+    text-transform: capitalize;
+}
+.dhanush{
+text-align: center;
 }
